// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > handles user input correctly 1`] = `
<DocumentFragment>
  <input
    class="checkbox"
    name="username"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has 'base' ('md') 1`] = `
<DocumentFragment>
  <input
    class="checkbox checkbox-md"
    name="base"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has 'large' ('lg') 1`] = `
<DocumentFragment>
  <input
    class="checkbox checkbox-lg"
    name="large"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has 'small' ('sm') 1`] = `
<DocumentFragment>
  <input
    class="checkbox checkbox-sm"
    name="small"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has 'tiny' ('xs') 1`] = `
<DocumentFragment>
  <input
    class="checkbox checkbox-xs"
    name="tiny"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has accent variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="checkbox checkbox-accent"
    name="name"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has error variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="checkbox checkbox-error"
    name="name"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has info variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="checkbox checkbox-info"
    name="name"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has primary variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="checkbox checkbox-primary"
    name="name"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has secondary variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="checkbox checkbox-secondary"
    name="name"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has success variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="checkbox checkbox-success"
    name="name"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > has warning variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="checkbox checkbox-warning"
    name="name"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > prevent user input when disabled 1`] = `
<DocumentFragment>
  <input
    class="checkbox"
    disabled=""
    name="username"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Checkbox > renders with the correct initial state 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="checkbox"
    name="username"
    role="checkbox"
    type="checkbox"
  />
</DocumentFragment>
`;
